@@ -3,6 +3,8 @@
 
 - Implemented issue #9965: Support for delayed initialization through
   ezcBaseInit.
+- Implemented issue #10457: Unclear what $name in getSetting() of
+  Configuration component means.
 - Added the ezcConfigurationManager::reset() method that returns the 
   manager to its unintialized state.
 - Fixed issue #10110: Warnings in configuration tests with the posix extension
